; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_string.c_strlenCommand.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_string.c_strlenCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32* }

@shared = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@OBJ_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strlenCommand(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @shared, i32 0, i32 0), align 4
  %11 = call i32* @lookupKeyReadOrReply(%struct.TYPE_7__* %4, i32 %9, i32 %10)
  store i32* %11, i32** %3, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %19, label %13

13:                                               ; preds = %1
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @OBJ_STRING, align 4
  %17 = call i64 @checkType(%struct.TYPE_7__* %14, i32* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13, %1
  br label %25

20:                                               ; preds = %13
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @stringObjectLen(i32* %22)
  %24 = call i32 @addReplyLongLong(%struct.TYPE_7__* %21, i32 %23)
  br label %25

25:                                               ; preds = %20, %19
  ret void
}

declare dso_local i32* @lookupKeyReadOrReply(%struct.TYPE_7__*, i32, i32) #1

declare dso_local i64 @checkType(%struct.TYPE_7__*, i32*, i32) #1

declare dso_local i32 @addReplyLongLong(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @stringObjectLen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
